--- a/index.html
+++ b/index.html
@@ -2292,8 +2292,8 @@
     </div>
 </section>
 
-<section id="header" class="border-double border-8 border-appgold h-screen hidden">
-<div class="flex flex-wrap text-white xxs:pt-32 xxs:pb-10 md:pt-40">
+<section id="header" class="border-double border-8 border-appgold xxs:pt-32 xxs:pb-10 md:pt-40 h-screen hidden">
+<div class="flex flex-wrap text-white ">
 	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase">&dash; Save The Date &dash;</h1>
 	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase xs:text-6xl md:text-6xl pt-6 animated zoomIn delay-1s">Theodora</h1>
 	  	<div class="flex w-full justify-center">
@@ -2308,7 +2308,7 @@
     </h1>
 </div>
 
-<div class="flex flex-wrap font-body text-white leading-none text-2xl pt-12 xxs:pb-24 md:pb-0">
+<div class="flex flex-wrap font-body text-white tracking-tighter leading-none text-2xl pt-12 xxs:pb-24 md:pb-0">
     <div class="flex justify-center xxs:w-1/4"><span id="days" class="font-extrabold text-appgold xxs:text-5xl md:text-10xl"></span><span id="day"></span></div>
     <div class="flex justify-center xxs:w-1/4"><span id="hours" class="font-extrabold text-appgold xxs:text-5xl md:text-10xl"></span><span id="hrs"></span></div>
     <div class="flex justify-center xxs:w-1/4"><span id="minutes" class="font-extrabold text-appgold xxs:text-5xl md:text-10xl"></span><span id="mins"></span></div>
