--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </div>
 
  <div>
-    <audio src="/resources/data/background.mp3" preload="auto" autoplay>	
+    <audio src="/resources/data/background.mp3" type="audio/mpeg" autoplay loop>	
     </audio>
  </div>
 </section>
