--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Poiret+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link href="resources/css/app.css" rel="stylesheet">
-   <title>The Agbo App</title>
+   <title>Castro &amp; Theodora</title>
 </head>
 
 <body class="bg-appteal ">
