--- a/index.html
+++ b/index.html
@@ -7,39 +7,42 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Liu+Jian+Mao+Cao&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Poiret+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+    <link rel="stylesheet" href="resources/css/animate.min.css">
     <link href="resources/css/app.css" rel="stylesheet">
    <title>Castro &amp; Theodora</title>
 </head>
 
 <body class="bg-appteal ">
-<section id="header" class="border-double border-8 border-appgold xxs:pt-32 xxs:pb-10 md:pt-40 h-screen">
+<section id="header" class="border-double border-8 border-appgold xxs:pt-20 xxs:pb-10 md:pt-40 h-screen">
 <div class="flex flex-wrap text-white animated slideInDown">
 	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase">&dash; Save The Date &dash;</h1>
-	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase xs:text-6xl md:text-6xl pt-6 animated zoomIn delay-1s">Castro</h1>
+	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase xs:text-6xl md:text-6xl pt-6 animated zoomIn">Castro</h1>
 	  <div class="flex w-full justify-center">
-			  <img class="xs:w-24 md:w-48 animated slideInLeft delay-1s" src="/resources/img/branch_2.png" alt="branch">
+			  <img class="xs:w-24 md:w-48 animated slideInLeft" src="/resources/img/branch_2.png" alt="branch">
 			  <span class="font-extrabold font-display text-6xl text-appgold px-6">&amp;</span>
-			  <img class="xs:w-24 md:w-48 animated slideInRight delay-1s" src="/resources/img/branch_1.png" alt="branch">
+			  <img class="xs:w-24 md:w-48 animated slideInRight" src="/resources/img/branch_1.png" alt="branch">
 		</div>
-	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase xs:text-6xl md:text-6xl pb-6 animated zoomIn delay-1s">Theodora</h1>
+	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase xs:text-6xl md:text-6xl pb-6 animated zoomIn">Theodora</h1>
 	  <h1 class="font-body text-center mx-auto tracking-wider leading-none text-3xl">
       <span class="xxs:hidden md:block">the FOURTEEN of DECEMBER, TWO THOUSAND and NINETEEN</span> 
       <span class="xxs:block md:hidden">14 &dot; 12 &dot; 2019</span> 
     </h1>
 </div>
 
-<div class="flex flex-wrap font-body text-white tracking-tighter leading-none text-2xl pt-12 xxs:pb-24 md:pb-0 animated slideInUp">
-    <div class="flex justify-center xxs:w-1/4"><span id="days" class="font-extrabold text-appgold xxs:text-5xl md:text-10xl animated zoomIn delay-1s"></span><span id="day"></span></div>
-    <div class="flex justify-center xxs:w-1/4"><span id="hours" class="font-extrabold text-appgold xxs:text-5xl md:text-10xl animated zoomIn delay-1s"></span><span id="hrs"></span></div>
-    <div class="flex justify-center xxs:w-1/4"><span id="minutes" class="font-extrabold text-appgold xxs:text-5xl md:text-10xl animated zoomIn delay-1s"></span><span id="mins"></span></div>
-    <div class="flex justify-center xxs:w-1/4"><span id="seconds" class="font-extrabold text-appgold xxs:text-5xl md:text-10xl animated zoomIn delay-1s"></span><span id="secs"></span></div>
-    <div class="flex justify-center xxs:w-full xxs:py-24 md:pt-8">
-      <button class="bg-transparent text-white font-hairline py-2 px-4 border border-appgold rounded outline-none shadow-xl cursor-not-allowed">
+<div class="flex flex-wrap font-body text-white tracking-tighter leading-none text-4xl pt-12 xxs:pb-24 md:pb-0 animated slideInUp">
+    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="days" class="font-extrabold text-appgold xxs:text-8xl md:text-10xl animated zoomIn delay-1s"></span><span id="day"></span></div>
+    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="hours" class="font-extrabold text-appgold xxs:text-8xl md:text-10xl animated zoomIn delay-1s"></span><span id="hrs"></span></div>
+    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="minutes" class="font-extrabold text-appgold xxs:text-8xl md:text-10xl animated zoomIn delay-1s"></span><span id="mins"></span></div>
+    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="seconds" class="font-extrabold text-appgold xxs:text-8xl md:text-10xl animated zoomIn delay-1s"></span><span id="secs"></span></div>
+    <!-- <div class="flex justify-center xxs:w-full xxs:py-24 md:pt-8">
+      <button class="bg-transparent text-white font-hairline py-2 px-4 border border-appgold outline-none shadow-xl cursor-not-allowed">
           Click Here To RSVP!
       </button>
-    </div>
+    </div> -->
 </div>
+
+<audio id="player" src="/resources/data/background.mp3" loop autoplay>
+</audio>
 </section>
 
 
@@ -49,7 +52,6 @@
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
-<script src="resources/js/jquery.drawsvg.min.js"></script>
 <script src="resources/js/app.js"></script>
 </body>
 </html>
