background sound added

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div> -->
 </div>
 
-<audio id="player" src="/resources/data/background.mp3" loop autoplay>
+<audio id="player" src="/resources/data/background.mp3" loop muted>
 </audio>
 </section>
 
