--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
     </h1>
 </div>
 
-<div class="flex flex-wrap font-body text-white tracking-tighter leading-none text-4xl pt-12 xxs:pb-6 md:pb-0 animated slideInUp">
+<div class="flex flex-wrap font-body text-white tracking-tighter leading-none text-4xl pt-12 md:pb-0 animated slideInUp">
     <div class="flex justify-center xxs:w-full md:w-1/4"><span id="days" class="font-extrabold text-appgold xxs:text-8xl md:text-10xl animated zoomIn delay-1s"></span><span id="day"></span></div>
     <div class="flex justify-center xxs:w-full md:w-1/4"><span id="hours" class="font-extrabold text-appgold xxs:text-8xl md:text-10xl animated zoomIn delay-1s"></span><span id="hrs"></span></div>
     <div class="flex justify-center xxs:w-full md:w-1/4"><span id="minutes" class="font-extrabold text-appgold xxs:text-8xl md:text-10xl animated zoomIn delay-1s"></span><span id="mins"></span></div>
     <div class="flex justify-center xxs:w-full md:w-1/4"><span id="seconds" class="font-extrabold text-appgold xxs:text-8xl md:text-10xl animated zoomIn delay-1s"></span><span id="secs"></span></div>
-    <!-- <div class="flex justify-center xxs:w-full xxs:py-24 md:pt-8">
+    <div class="flex justify-center xxs:w-full md:pt-8 hidden">
       <button class="bg-transparent text-white font-hairline py-2 px-4 border border-appgold outline-none shadow-xl cursor-not-allowed">
           Click Here To RSVP!
       </button>
-    </div> -->
+    </div>
 </div>
 
 <audio id="player" src="/resources/data/background.mp3" loop muted>
