background sound added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="border-double border-8 border-appgold h-screen">
 <head>
  
     <meta charset="UTF-8">
@@ -12,8 +12,8 @@
    <title>Castro &amp; Theodora</title>
 </head>
 
-<body class="bg-appteal ">
-<section id="header" class="border-double border-8 border-appgold xxs:pt-16 xxs:pb-10 md:pt-40 h-screen">
+<body class="bg-appteal">
+<section class="xxs:pt-16 xxs:pb-10 md:pt-40 ">
 <div class="flex flex-wrap text-white animated slideInDown">
 	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase">&dash; Save The Date &dash;</h1>
 	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase xs:text-6xl md:text-6xl pt-6 animated zoomIn">Castro</h1>
