--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <div class="flex justify-center xxs:w-full md:w-1/4"><span id="hours" class="font-extrabold text-appgold xxs:text-8xl md:text-10xl animated zoomIn delay-1s"></span><span id="hrs"></span></div>
     <div class="flex justify-center xxs:w-full md:w-1/4"><span id="minutes" class="font-extrabold text-appgold xxs:text-8xl md:text-10xl animated zoomIn delay-1s"></span><span id="mins"></span></div>
     <div class="flex justify-center xxs:w-full md:w-1/4"><span id="seconds" class="font-extrabold text-appgold xxs:text-8xl md:text-10xl animated zoomIn delay-1s"></span><span id="secs"></span></div>
-    <div class="flex justify-center xxs:w-full xxs:pt-8 hidden">
-      <button class="bg-transparent text-white font-hairline py-2 px-4 border border-appgold outline-none shadow-xl cursor-not-allowed">
+    <div class="flex justify-center xxs:w-full xxs:pt-8">
+      <button class="bg-transparent text-lg font-hairline py-2 px-4 border border-appgold outline-none shadow-xl cursor-not-allowed">
           Click Here To RSVP!
       </button>
     </div>
