--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="border-double border-8 border-appgold h-screen">
+<html lang="en">
 <head>
  
     <meta charset="UTF-8">
@@ -12,17 +12,17 @@
    <title>Castro &amp; Theodora</title>
 </head>
 
-<body class="bg-appteal">
-<section class="xxs:pt-16 xxs:pb-10 md:pt-40 ">
+<body class="bg-appteal h-screen">
+<section class="xxs:pt-8 xxs:pb-10 md:py-28 xl:pt-40 border-double border-8 border-appgold ">
 <div class="flex flex-wrap text-white animated slideInDown">
 	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase">&dash; Save The Date &dash;</h1>
-	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase xs:text-6xl md:text-6xl pt-6 animated zoomIn">Castro</h1>
+	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase xxs:text-5xl md:text-6xl pt-6 animated zoomIn">Castro</h1>
 	  <div class="flex w-full justify-center">
-			  <img class="xs:w-24 md:w-48 animated slideInLeft" src="/resources/img/branch_2.png" alt="branch">
+			  <img class="xxs:w-16 xs:w-24 md:w-48 animated slideInLeft" src="/resources/img/branch_2.png" alt="branch">
 			  <span class="font-extrabold font-display text-6xl text-appgold px-6">&amp;</span>
-			  <img class="xs:w-24 md:w-48 animated slideInRight" src="/resources/img/branch_1.png" alt="branch">
+			  <img class="xxs:w-16 xs:w-24 md:w-48 animated slideInRight" src="/resources/img/branch_1.png" alt="branch">
 		</div>
-	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase xs:text-6xl md:text-6xl pb-6 animated zoomIn">Theodora</h1>
+	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase xxs:text-5xl md:text-6xl pb-6 animated zoomIn">Theodora</h1>
 	  <h1 class="font-body text-center mx-auto tracking-wider leading-none text-3xl">
       <span class="xxs:hidden md:block">the FOURTEEN of DECEMBER, TWO THOUSAND and NINETEEN</span> 
       <span class="xxs:block md:hidden">14 &dot; 12 &dot; 2019</span> 
@@ -30,11 +30,11 @@
 </div>
 
 <div class="flex flex-wrap font-body text-white tracking-tighter leading-none text-4xl pt-12 md:pb-0 animated slideInUp">
-    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="days" class="font-extrabold text-appgold xxs:text-8xl md:text-10xl animated zoomIn delay-1s"></span><span id="day"></span></div>
-    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="hours" class="font-extrabold text-appgold xxs:text-8xl md:text-10xl animated zoomIn delay-1s"></span><span id="hrs"></span></div>
-    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="minutes" class="font-extrabold text-appgold xxs:text-8xl md:text-10xl animated zoomIn delay-1s"></span><span id="mins"></span></div>
-    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="seconds" class="font-extrabold text-appgold xxs:text-8xl md:text-10xl animated zoomIn delay-1s"></span><span id="secs"></span></div>
-    <div class="flex justify-center xxs:w-full xxs:pt-8">
+    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="days" class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span id="day"></span></div>
+    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="hours" class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span id="hrs"></span></div>
+    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="minutes" class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span id="mins"></span></div>
+    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="seconds" class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span id="secs"></span></div>
+    <div class="flex justify-center xxs:w-full xxs:pt-8 md:pt-16 xl:pt-2">
       <button class="bg-transparent text-lg font-hairline py-2 px-4 border border-appgold outline-none shadow-xl cursor-not-allowed">
           Click Here To RSVP!
       </button>
