--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Poiret+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="resources/css/animate.min.css">
     <link href="resources/css/app.css" rel="stylesheet">
-   <title>Castro &amp; Theodora</title>
+   <title>Eyram &amp; Esi</title>
 </head>
 
 <body class="bg-appteal h-screen">
@@ -2293,13 +2293,13 @@
 <section id="landing" class="xxs:pt-12 xxs:pb-10 md:py-28 xl:pt-32 border-double border-8 border-appgold h-screen hidden">
 <div class="flex flex-wrap text-white animated slideInDown">
 	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase">&dash; Save The Date &dash;</h1>
-	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase xxs:text-5xl md:text-6xl pt-6 animated zoomIn">Castro</h1>
+	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase xxs:text-5xl md:text-6xl pt-6 animated zoomIn">Eyram</h1>
 	  <div class="flex w-full justify-center">
 			  <img class="xxs:w-16 xs:w-24 md:w-48 animated slideInLeft" src="/resources/img/branch_2.png" alt="branch">
 			  <span class="font-extrabold font-display text-6xl text-appgold px-6">&amp;</span>
 			  <img class="xxs:w-16 xs:w-24 md:w-48 animated slideInRight" src="/resources/img/branch_1.png" alt="branch">
 		</div>
-	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase xxs:text-5xl md:text-6xl pb-6 animated zoomIn">Theodora</h1>
+	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase xxs:text-5xl md:text-6xl pb-6 animated zoomIn">Esi</h1>
 	  <h1 class="font-body text-center mx-auto tracking-wider leading-none text-3xl">
       <span class="xxs:hidden md:block">the FOURTEEN of DECEMBER, TWO THOUSAND and NINETEEN</span> 
       <span class="xxs:block md:hidden">14 &dot; 12 &dot; 2019</span> 
