--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Liu+Jian+Mao+Cao&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sorts+Mill+Goudy:400i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Poiret+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="resources/css/animate.min.css">
     <link href="resources/css/app.css" rel="stylesheet">
@@ -13,11 +13,12 @@
 </head>
 
 <body class="bg-appteal h-screen">
-<section id="initial" class="xxs:pt-20 xxs:pb-10 md:py-28 xl:pt-20 border-double border-8 border-appgold h-screen">
-  <div class="flex justify-center">
+<section id="initial" class="xxs:pt-32 xs:pt-64 md:pt-72 xl:pt-20 border-double border-8 border-appgold h-screen">
+  <p class="font-landing font-extrabold xxs:text-6xl md:text-8xl text-center text-appgold xl:pt-56">E &amp; E</p>
+  <div class="flex justify-center xxs:-mt-68 xl:-mt-68">
       <?xml version="1.0" encoding="UTF-8"?>
       <!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
-      <svg class="h-128" enable-background="new 0 0 640 480" version="1.1" viewBox="0 0 640 480" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
+      <svg class="xxs:h-96 h-128" enable-background="new 0 0 640 480" version="1.1" viewBox="0 0 640 480" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
       <g stroke="#CDA349" stroke-width=".5616">
         <g transform="matrix(.50295 .52823 -.45934 .58767 190.71 -103.38)">
             <linearGradient id="bp" x1="-979.7" x2="-968.11" y1="815.72" y2="815.72" gradientTransform="matrix(.9754 -.3956 .4137 .8573 694.14 -706.41)" gradientUnits="userSpaceOnUse">
@@ -2285,7 +2286,7 @@
       </svg>
       
   </div>
-  <h1 class="font-body xxs:text-2xl xl:text-6xl text-center text-white tracking-tightest leading-tight">
+  <h1 class="font-body md:text-4xl xl:text-6xl text-center text-white tracking-tightest leading-tight">
       I have found the one whom my soul loves. <br> &dash; Song of Songs 3:4 &dash;
   </h1>
 </section>
