--- a/index.html
+++ b/index.html
@@ -2286,7 +2286,7 @@
       </svg>
       
   </div>
-  <h1 class="font-body md:text-4xl xl:text-6xl text-center text-white tracking-tightest leading-tight">
+  <h1 class="font-body xxs:text-2xl md:text-4xl xl:text-6xl text-center text-white tracking-tightest leading-tight">
       I have found the one whom my soul loves. <br> &dash; Song of Songs 3:4 &dash;
   </h1>
 </section>
