landing page added

--- a/index.html
+++ b/index.html
@@ -2308,10 +2308,10 @@
 </div>
 
 <div class="flex flex-wrap font-body text-white tracking-tighter leading-none text-4xl pt-12 md:pb-0 animated slideInUp">
-    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="days" class="font-black text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span id="day"></span></div>
-    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="hours" class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span id="hrs"></span></div>
-    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="minutes" class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span id="mins"></span></div>
-    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="seconds" class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span id="secs"></span></div>
+    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="days" class="font-black text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span id="day" class="pl-4"></span></div>
+    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="hours" class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span id="hrs" class="pl-4"></span></div>
+    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="minutes" class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span id="mins" class="pl-4"></span></div>
+    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="seconds" class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span id="secs" class="pl-4"></span></div>
     <div class="flex justify-center xxs:w-full xxs:pt-8 md:pt-16 xl:pt-10">
       <button class="bg-transparent text-lg font-hairline py-2 px-4 border border-appgold outline-none shadow-xl cursor-not-allowed animated pulse delay-2s">
           Click Here To RSVP!
