landing page added

--- a/index.html
+++ b/index.html
@@ -2302,7 +2302,7 @@
 		</div>
 	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase xxs:text-5xl md:text-6xl pb-6 animated zoomIn">Esi</h1>
 	  <h1 class="font-body text-center mx-auto tracking-wider leading-none text-3xl">
-      <span class="xxs:hidden md:block">the FOURTEEN of DECEMBER, TWO THOUSAND and NINETEEN</span> 
+      <span class="xxs:hidden md:block">the FOURTEENth of DECEMBER, TWO THOUSAND and NINETEEN</span> 
       <span class="xxs:block md:hidden">14 &dot; 12 &dot; 2019</span> 
     </h1>
 </div>
