landing page added

--- a/index.html
+++ b/index.html
@@ -2319,7 +2319,7 @@
     </div>
 </div>
 
-<audio id="player" src="/resources/data/background.mp3" loop muted>
+<audio id="player" src="/resources/data/background.mp3" muted>
 </audio>
 </section>
 
