flying birds added

--- a/index.html
+++ b/index.html
@@ -2322,19 +2322,20 @@
     </audio>
 </div>
 
-<div class="bird-container bird-container--one">
+<!-- Markup for flying birds animated using CSS -->
+<div class="bird-container bird-container--one xxs:hidden md:block">
 		<div class="bird bird--one"></div>
 </div>
 	
-<div class="bird-container bird-container--two">
+<div class="bird-container bird-container--two xxs:hidden md:block">
 		<div class="bird bird--two"></div>
 </div>
 	
-<div class="bird-container bird-container--three">
+<div class="bird-container bird-container--three xxs:hidden md:block">
 		<div class="bird bird--three"></div>
 </div>
 	
-<div class="bird-container bird-container--four">
+<div class="bird-container bird-container--four xxs:hidden md:block">
 		<div class="bird bird--four"></div>
 </div>
  
