flying birds added

--- a/index.html
+++ b/index.html
@@ -2315,7 +2315,7 @@
 </div>
 
 <div class="flex justify-center font-body text-white tracking-tighter leading-none text-4xl pt-12 md:pb-0">
-    <button class="bg-transparent text-lg font-hairline py-2 px-4 border border-appgold outline-none shadow-xl cursor-not-allowed animated pulse delay-2s">
+    <button class="xxs:text-lg lg:text-3xl py-2 px-4 border border-appgold focus:outline-none shadow-xl cursor-not-allowed animated pulse delay-2s">
         Click Here To RSVP!
     </button>
     <audio id="player" src="/resources/data/background.mp3" muted>
