flying birds added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Sorts+Mill+Goudy:400i&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Poiret+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:100|Playfair+Display:900|Poiret+One|Sorts+Mill+Goudy:400i&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="resources/css/animate.min.css">
     <link href="resources/css/app.css" rel="stylesheet">
    <title>Eyram &amp; Esi</title>
@@ -2286,7 +2285,7 @@
       </svg>
       
   </div>
-  <h1 class="font-body xxs:text-2xl md:text-4xl xl:text-6xl text-center text-white tracking-tightest leading-tight">
+  <h1 class="font-scrolling xxs:text-2xl md:text-4xl xl:text-6xl text-center text-white tracking-tightest leading-tight">
       I have found the one whom my soul loves. <br> &dash; Song of Songs 3:4 &dash;
   </h1>
 </section>
