--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:100|Playfair+Display:900|Poiret+One|Sorts+Mill+Goudy:400i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Poiret+One|Sorts+Mill+Goudy:400i&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="resources/css/animate.min.css">
     <link href="resources/css/app.css" rel="stylesheet">
    <title>Eyram &amp; Esi</title>
 </head>
 
 <body class="bg-appteal h-screen">
-<section id="initial" class="xxs:pt-32 xs:pt-64 md:pt-72 xl:pt-20 border-double border-8 border-appgold h-screen">
+<section id="initial" class="bg-black xxs:pt-32 xs:pt-64 md:pt-72 xl:pt-20 border-double border-8 border-appgold h-screen">
   <p class="font-landing font-extrabold xxs:text-6xl md:text-8xl text-center text-appgold xl:pt-56">E &amp; E</p>
   <div class="flex justify-center xxs:-mt-68 xl:-mt-68">
       <?xml version="1.0" encoding="UTF-8"?>
@@ -2285,7 +2285,7 @@
       </svg>
       
   </div>
-  <h1 class="font-scrolling xxs:text-2xl md:text-4xl xl:text-6xl text-center text-white tracking-tightest leading-tight">
+  <h1 class="font-landing xxs:text-2xl md:text-4xl xl:text-6xl text-center text-white tracking-tightest leading-tight">
       I have found the one whom my soul loves. <br> &dash; Song of Songs 3:4 &dash;
   </h1>
 </section>
