flying birds added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <title>Eyram &amp; Esi</title>
 </head>
 
-<body class="bg-appteal h-screen">
+<body class="h-screen">
 <section id="initial" class="bg-black xxs:pt-32 xs:pt-64 md:pt-72 xl:pt-20 border-double border-8 border-appgold h-screen">
   <p class="font-landing font-extrabold xxs:text-6xl md:text-8xl text-center text-appgold xl:pt-56">E &amp; E</p>
   <div class="flex justify-center xxs:-mt-68 xl:-mt-68">
@@ -2290,7 +2290,7 @@
   </h1>
 </section>
 
-<section id="landing" class="xxs:pt-12 xxs:pb-10 md:py-28 xl:pt-32 border-double border-8 border-appgold h-screen hidden">
+<section id="landing" class="bg-appteal xxs:pt-12 xxs:pb-10 md:py-28 xl:pt-32 border-double border-8 border-appgold h-screen hidden">
 <div class="flex flex-wrap text-white animated slideInDown">
 	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase">&dash; Save The Date &dash;</h1>
 	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase xxs:text-5xl md:text-6xl lg:text-8xl pt-6 animated zoomIn">Eyram</h1>
