--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
    <title>Eyram &amp; Esi</title>
 </head>
 
-<body class="h-screen">
+<body class="bg-black h-screen">
 <section id="initial" class="bg-black xxs:pt-32 xs:pt-64 md:pt-72 xl:pt-20 border-double border-8 border-appgold h-screen">
-  <p class="font-landing font-extrabold xxs:text-6xl md:text-8xl text-center text-appgold xl:pt-56">E &amp; E</p>
-  <div class="flex justify-center xxs:-mt-68 xl:-mt-68">
+  <p class="xxs:hidden lg:block font-landing font-extrabold xxs:text-6xl md:text-8xl text-center text-appgold xl:pt-56">E &amp; E</p>
+  <div class="xxs:hidden lg:flex justify-center xl:-mt-68">
       <?xml version="1.0" encoding="UTF-8"?>
       <!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
       <svg class="xxs:h-96 h-128" enable-background="new 0 0 640 480" version="1.1" viewBox="0 0 640 480" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
@@ -2285,6 +2285,7 @@
       </svg>
       
   </div>
+  <p class="font-body xxs:block lg:hidden xxs:text-8xl text-white text-center pt-12 pb-68">14 &dot; 12 &dot; 19 </p>
   <h1 class="font-landing xxs:text-2xl md:text-4xl xl:text-6xl text-center text-white tracking-tightest leading-tight">
       I have found the one whom my soul loves. <br> &dash; Song of Songs 3:4 &dash;
   </h1>
