color scheme updated

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
    <title>Eyram &amp; Esi</title>
 </head>
 
-<body class="bg-black h-screen">
-<section id="initial" class="bg-black xxs:pt-32 xs:pt-48 md:pt-72 xl:pt-20 border-double border-8 border-appgold h-screen">
+<body class="bg-appteal h-screen">
+<section id="initial" class="bg-appteal xxs:pt-32 xs:pt-48 md:pt-72 xl:pt-20 border-double border-8 border-appgold h-screen">
   <p class="xxs:hidden lg:block font-landing font-extrabold xxs:text-6xl md:text-8xl text-center text-appgold xl:pt-56">E &amp; E</p>
   <div class="xxs:hidden lg:flex justify-center xl:-mt-68">
       <?xml version="1.0" encoding="UTF-8"?>
       <!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
-      <svg class="xxs:h-96 h-128" enable-background="new 0 0 640 480" version="1.1" viewBox="0 0 640 480" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
+      <svg class="xxs:h-96 lg:h-128" enable-background="new 0 0 640 480" version="1.1" viewBox="0 0 640 480" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
       <g stroke="#CDA349" stroke-width=".5616">
         <g transform="matrix(.50295 .52823 -.45934 .58767 190.71 -103.38)">
             <linearGradient id="bp" x1="-979.7" x2="-968.11" y1="815.72" y2="815.72" gradientTransform="matrix(.9754 -.3956 .4137 .8573 694.14 -706.41)" gradientUnits="userSpaceOnUse">
