--- a/rsvp.html
+++ b/rsvp.html
@@ -6,18 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Poiret+One|Sorts+Mill+Goudy:400i&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="resources/css/animate.min.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="resources/css/app.css" rel="stylesheet">
    <title>Eyram &amp; Esi || RSVP</title>
 </head>
 
 <body id="rsvp" class="font-body">
-  
     <div class="flex flex-wrap xxs:text-xl lg:text-3xl h-screen">
-        <div class="xxs:w-full lg:w-1/2 text-white bg-appteal xxs:px-10 xxs:pt-32 lg:px-20 lg:pt-48">
+        <div class="xxs:w-full lg:w-1/2 text-white bg-appteal xxs:px-10 xxs:pt-20 lg:px-20 lg:pt-48">
           <h1 class="text-center text-5xl tracking-loose antialiased pb-10" >RSVP</h1>
-          <form class="w-full" name="rsvp" method="POST" data-netlify="true">
+          <form class="w-full" name="rsvp" action="/index.html" method="POST" data-netlify="true">
               <div class="flex flex-wrap">
                   <div class="w-full xxs:pr-4 pb-4">
                       <label class="tracking-wide mb-2" for="grid-name">Your Full Name</label>
@@ -49,7 +46,7 @@
               </div>
             </form>  
         </div>
-        <div id="map" class="xxs:w-full lg:w-1/2 font-black text-black text-center bg-white xxs:px-10 xxs:pt-32 lg:px-20 lg:pt-40">
+        <div id="map" class="xxs:w-full lg:w-1/2 font-black text-black text-center bg-white xxs:px-10 xxs:pt-10 lg:px-20 lg:pt-40">
             <img class="shadow-xl" src="/resources/img/location.png" alt="directions">
             <a href="https://www.google.com/maps/place/5%C2%B032'59.0%22N+0%C2%B014'02.0%22W/@5.549712,-0.2344212,19z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d5.5497123!4d-0.2338741"><span>Click Here for Directions</span></a>
         </div>
