rsvp page added

--- a/rsvp.html
+++ b/rsvp.html
@@ -14,7 +14,7 @@
     <div class="flex flex-wrap xxs:text-xl lg:text-3xl h-screen">
         <div class="xxs:w-full lg:w-1/2 text-white bg-appteal xxs:px-10 xxs:pt-20 lg:px-20 lg:pt-48">
           <h1 class="text-center text-5xl tracking-loose antialiased pb-10" >RSVP</h1>
-          <form class="w-full" name="rsvp" action="/index.html" method="POST" data-netlify="true">
+          <form class="w-full" name="rsvp" method="POST" data-netlify="true">
               <div class="flex flex-wrap">
                   <div class="w-full xxs:pr-4 pb-4">
                       <label class="tracking-wide mb-2" for="grid-name">Your Full Name</label>
