rsvp page added

--- a/rsvp.html
+++ b/rsvp.html
@@ -40,7 +40,7 @@
                   <div class="w-full xxs:pr-4" data-netlify-recaptcha="true">
 
                   </div>
-                  <button class="border border-appgold focus:outline-none shadow-xl py-2 px-4" type="submit">
+                  <button class="border border-appgold focus:outline-none shadow-xl py-2 px-4 my-6" type="submit">
                   send
                   </button>
               </div>
