--- a/rsvp.html
+++ b/rsvp.html
@@ -46,7 +46,7 @@
               </div>
             </form>  
         </div>
-        <div id="map" class="xxs:w-full xl:w-1/2 font-black text-black text-center bg-white xxs:px-10 xxs:pt-10 xl:px-20 xl:pt-40">
+        <div id="map" class="xxs:w-full xl:w-1/2 font-black text-black text-center bg-white xxs:px-10 xxs:py-10 xl:px-20 xl:pt-40">
           <a href="https://www.google.com/maps/place/5%C2%B032'59.0%22N+0%C2%B014'02.0%22W/@5.549712,-0.2344212,19z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d5.5497123!4d-0.2338741"><img class="shadow-xl" src="/resources/img/location.png" alt="directions"></a>
         </div>
     </div>
