--- a/index.html
+++ b/index.html
@@ -11,24 +11,29 @@
    <title>Eyram &amp; Esi</title>
 </head>
 
-<body class="bg-appteal h-screen">
-<section id="initial" class="bg-appteal xxs:pt-32 xs:pt-48 md:pt-72 xl:pt-48 border-double border-8 border-appgold h-screen">  
-  <h1 class="text-white font-body text-center text-10xl tracking-loose antialiased py-24">14&dash;12&dash;19 </h1>
-  <p class="font-body xxs:text-2xl md:text-4xl xl:text-6xl text-center text-white tracking-tightest leading-tight">
-      I have found the one whom my soul loves. <br> &dash; Song of Songs 3:4 &dash;
-  </p>
+<body class="bg-appteal">
+<section id="initial" class="bg-appteal font-body text-center text-white tracking-tightest leading-tight xxs:pt-32 xs:pt-48 md:pt-72 xl:pt-48 border-double border-8 border-appgold h-screen">  
+  <h1 class="text-white font-body text-center xxs:text-8xl xl:text-10xl tracking-widest py-24">
+    14&dash;12&dash;19 
+  </h1>
+  <p class="xxs:text-2xl md:text-4xl xl:text-6xl">
+      I have found the one whom my soul loves.
+  </p> <br> 
+  <span class="xxs:text-2xl md:text-4xl xl:text-6xl"> 
+    &dash; Song of Songs 3:4 &dash;
+  </span>
 </section>
 
-<section id="landing" class="bg-appteal xxs:pt-12 xxs:pb-10 md:py-28 xl:pt-32 border-double border-8 border-appgold h-screen hidden">
-<div class="flex flex-wrap text-white animated slideInDown">
-	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase">&dash; Save The Date &dash;</h1>
-	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase xxs:text-5xl md:text-6xl lg:text-8xl pt-6 animated zoomIn">Eyram</h1>
+<section id="landing" class="bg-appteal xxs:pt-12 md:py-28 xl:pt-32 border-double border-8 border-appgold h-screen hidden">
+<div id="main" class="flex flex-wrap text-white">
+	  <h1 class="flex w-full justify-center font-body xxs:tracking-widest xl:tracking-loose leading-none uppercase">&dash; Save The Date &dash;</h1>
+	  <h1 class="flex w-full justify-center font-body tracking-widest leading-none uppercase xxs:text-5xl md:text-6xl lg:text-8xl pt-6 animated zoomIn delay-1s">Eyram</h1>
 	  <div class="flex w-full justify-center">
 			  <img class="xxs:w-16 xs:w-24 md:w-48 animated slideInLeft" src="/resources/img/branch_2.png" alt="branch">
 			  <span class="font-extrabold font-display text-6xl text-appgold px-6">&amp;</span>
 			  <img class="xxs:w-16 xs:w-24 md:w-48 animated slideInRight" src="/resources/img/branch_1.png" alt="branch">
 		</div>
-	  <h1 class="flex w-full justify-center font-body tracking-wider leading-none uppercase xxs:text-5xl md:text-6xl lg:text-8xl pb-6 animated zoomIn">Esi</h1>
+	  <h1 class="flex w-full justify-center font-body tracking-widest leading-none uppercase xxs:text-5xl md:text-6xl lg:text-8xl pb-6 animated zoomIn delay-1s">Esi</h1>
 	  <h1 class="font-body text-center mx-auto tracking-wider leading-none text-3xl">
       <span class="xxs:hidden md:block">the FOURTEENth of DECEMBER, TWO THOUSAND and NINETEEN</span> 
       <span class="xxs:block md:hidden">14 &dot; 12 &dot; 2019</span> 
@@ -42,8 +47,8 @@
     <div class="flex justify-center xxs:w-full md:w-1/4"><span id="seconds" class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span id="secs" class="pl-4"></span></div>
 </div>
 
-<div class="flex justify-center font-body text-white tracking-tighter leading-none text-4xl xxs:pt-2 xl:pt-12 md:pb-0">
-    <a id="rsvp" href="#"><button class="xxs:text-lg lg:text-3xl py-2 px-4 border border-appgold focus:outline-none shadow-xl cursor-not-allowed animated pulse delay-2s">
+<div id="last" class="flex justify-center font-body text-white tracking-tighter leading-none text-4xl xxs:pt-2 xl:pt-12 md:pb-0">
+    <a id="rsvp" href="#"><button class="xxs:text-xl lg:text-3xl py-2 px-4 border border-appgold focus:outline-none shadow-xl animated pulse delay-2s">
      Click Here To RSVP!
     </button></a>
     <audio id="player" src="/resources/data/background.mp3" muted>
