--- a/rsvp.html
+++ b/rsvp.html
@@ -10,28 +10,29 @@
    <title>Eyram &amp; Esi || RSVP</title>
 </head>
 
-<body id="rsvp" class="font-body">
+<body id="rsvp" class="font-body antialiased">
     <div class="flex flex-wrap xxs:text-xl lg:text-3xl h-screen">
         <div class="xxs:w-full xl:w-1/2 text-white bg-appteal xxs:px-20 xxs:pt-20 xl:px-20 xl:pt-48">
-          <h1 class="text-center text-5xl tracking-loose antialiased pb-10" >RSVP</h1>
+          <h1 class="text-center text-5xl tracking-loose  pb-10" >RSVP</h1>
           <form class="w-full" name="rsvp" method="POST" data-netlify="true">
               <div class="flex flex-wrap">
-                  <div class="w-full xxs:pr-4 pb-4">
+                  <div class="w-full pb-4">
                       <label class="tracking-wide mb-2" for="grid-name">Your Full Name</label>
-                      <input class="appearance-none bg-transparent border-b border-b-2 border-main_green w-full py-1 leading-tight focus:outline-none" id="grid-first-name" name="name" type="text" placeholder="" aria-label="your name" required>
+                      <input class="appearance-none bg-transparent border-b border-appgold w-full leading-tight focus:outline-none" id="grid-first-name" name="name" type="text" placeholder="" aria-label="your name" required>
                   </div>
-                  <div class="w-full xxs:pr-4 pb-4">
-                      <label class="tracking-wide mb-2" for="grid-number">Number of people attending</label>
-                      <input class="appearance-none bg-transparent border-b border-b-2 border-main_green w-full mr-3 py-1 leading-tight focus:outline-none" id="grid-number" name="number" type="number" placeholder="" aria-label="number attending" required>
+                  <div class="w-full pb-4">
+                      <label class="tracking-wide mb-2" for="grid-number">Number of People Attending</label>
+                      <input class="appearance-none bg-transparent border-b border-appgold w-full leading-tight focus:outline-none" id="grid-number" name="number" type="number" placeholder="" aria-label="number attending" required>
                   </div>
-                  <div class="w-full xxs:pr-4 pb-4">
+                  <div class="w-full pb-4">
                     <label class="tracking-wide mb-2" for="grid-yes-no">Will You Be Attending?</label>
                     <div class="relative">
-                      <select class="appearance-none bg-transparent border-b border-b-2 border-main_green w-full leading-tight focus:outline-none" id="grid-yes-no" name="response">
+                      <select class="appearance-none bg-transparent border-b border-appgold w-full leading-tight focus:outline-none" id="grid-yes-no" name="response" required>
+                        <option></option>
                         <option>Yes</option>
                         <option>No</option>
                       </select>
-                      <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+                      <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-500">
                         <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
                       </div>
                     </div>
@@ -46,8 +47,9 @@
               </div>
             </form>  
         </div>
-        <div id="map" class="xxs:w-full xl:w-1/2 font-black text-black text-center bg-white xxs:px-20 xxs:py-10 xl:px-20 xl:pt-40">
-          <a href="https://www.google.com/maps/place/5%C2%B032'59.0%22N+0%C2%B014'02.0%22W/@5.549712,-0.2344212,19z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d5.5497123!4d-0.2338741"><img class="shadow-xl" src="/resources/img/location.png" alt="directions"></a>
+        <div id="map" class="xxs:w-full xl:w-1/2 font-black text-black text-center bg-white shadow-xl xxs:px-20 xxs:py-10 xl:px-20 xl:pt-48">
+          <a href="https://www.google.com/maps/place/5%C2%B032'59.0%22N+0%C2%B014'02.0%22W/@5.549712,-0.2344212,19z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d5.5497123!4d-0.2338741"><img class="shadow-xl border-4 border-appgold" src="/resources/img/location.png" alt="directions"></a>
+          <p>Click on Map to show directions</p>
         </div>
     </div>
 </body>
