--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="bg-appteal">
-<section id="initial" class="bg-appteal font-body text-center text-white tracking-tightest leading-tight xxs:pt-32 xs:pt-48 md:pt-72 xl:pt-48 border-double border-8 border-appgold h-screen">  
+<section id="initial" class="bg-appteal font-body text-center text-white tracking-tightest leading-tight xxs:pt-32 xs:pt-48 border-double border-8 border-appgold h-screen">  
   <h1 class="text-white font-body text-center xxs:text-8xl xl:text-10xl tracking-widest py-24">
     14&dash;12&dash;19 
   </h1>
@@ -24,8 +24,30 @@
   </span>
 </section>
 
-<section id="landing" class="bg-appteal xxs:pt-12 md:py-28 xl:pt-32 border-double border-8 border-appgold h-screen hidden">
-<div id="main" class="flex flex-wrap text-white">
+<section id="landing" class="bg-appteal border-double border-8 border-appgold h-screen hidden">
+<div class="sticky font-body text-white top-0 z-40 text-white">
+  <nav class="flex flex-wrap justify-between bg-appteal xxs:py-2">
+    <div class="cursor-pointer xxs:ml-5">
+      <a href="/"><img src="/resources/img/logo.png" alt="logo"></a>
+    </div>
+    <div class="toggle cursor-pointer block lg:hidden p-2">
+                  <svg class="icon fill-current h-8 w-8 block" viewBox="0 0 512 512"><path d="M64 384h384v-42.666H64V384zm0-106.666h384v-42.667H64v42.667zM64 128v42.665h384V128H64z"/></svg>
+                  <svg class="icon fill-current h-8 w-8 hidden" viewBox="0 0 512 512"><path d="M405 136.798L375.202 107 256 226.202 136.798 107 107 136.798 226.202 256 107 375.202 136.798 405 256 285.798 375.202 405 405 375.202 285.798 256z"/></svg>
+    </div>
+    <div class="nav w-full lg:flex lg:items-center lg:w-auto xxs:px-4 xxs:hidden lg:block">
+      <a href="#" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-12 lg:pb-2 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
+                    Our Story
+      </a>
+      <a href="/photos.html" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-12 lg:pb-2 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
+                    Photos
+      </a>
+      <a href="#" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-5 lg:pb-2 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
+                    Contact
+      </a>
+    </div>
+  </nav>
+</div>
+<div id="main" class="flex flex-wrap text-white xxs:pt-2 md:pt-10 xl:pt-12">
 	  <h1 class="flex w-full justify-center font-body xxs:tracking-widest xl:tracking-loose leading-none uppercase">&dash; Save The Date &dash;</h1>
 	  <h1 class="flex w-full justify-center font-body tracking-widest leading-none uppercase xxs:text-5xl md:text-6xl lg:text-8xl pt-6 animated zoomIn delay-1s">Eyram</h1>
 	  <div class="flex w-full justify-center">
@@ -48,10 +70,10 @@
 </div>
 
 <div id="last" class="flex justify-center font-body text-white tracking-tighter leading-none text-4xl xxs:pt-2 xl:pt-12 md:pb-0">
-    <a id="rsvp" href="#"><button class="xxs:text-xl lg:text-3xl py-2 px-4 border border-appgold focus:outline-none shadow-xl animated pulse delay-2s">
+    <a href="#"><button class="xxs:text-xl lg:text-3xl py-2 px-4 border border-appgold focus:outline-none shadow-xl animated pulse delay-2s">
      Click Here To RSVP!
     </button></a>
-    <audio id="player" src="/resources/data/background.mp3" muted>
+    <audio src="/resources/data/background.mp3" muted>
     </audio>
 </div>
 
@@ -71,18 +93,12 @@
 <div class="bird-container bird-container--four xxs:hidden md:block">
 		<div class="bird bird--four"></div>
 </div>
- 
-
 
 </section>
-
-
-
-
-<!-- <script
+<script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script> -->
+  crossorigin="anonymous"></script>
 <script src="resources/js/app.js"></script>
 </body>
 </html>
