--- a/photos.html
+++ b/photos.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -12,19 +11,39 @@
    <title>Eyram &amp; Esi || Photos</title>
 </head>
 
-<body class="bg-appteal h-screen">
-<div id="bg_text" class="pt-72">
-  <h1 class="text-white font-body text-right text-10xl tracking-loose antialiased animated pulse h-screen z-0">PHOTOS</h1>
+<body class="bg-appteal font-body text-white h-screen">
+  <section class="sticky top-0 z-40">
+    <nav class="flex flex-wrap justify-between bg-appteal xxs:py-2">
+      <div class="cursor-pointer xxs:ml-5">
+              <a href="/"><img src="/resources/img/logo.png" alt="logo"></a>
+      </div>
+      <div class="toggle cursor-pointer block lg:hidden p-2">
+              <svg class="icon fill-current h-8 w-8 block" viewBox="0 0 512 512"><path d="M64 384h384v-42.666H64V384zm0-106.666h384v-42.667H64v42.667zM64 128v42.665h384V128H64z"/></svg>
+              <svg class="icon fill-current h-8 w-8 hidden" viewBox="0 0 512 512"><path d="M405 136.798L375.202 107 256 226.202 136.798 107 107 136.798 226.202 256 107 375.202 136.798 405 256 285.798 375.202 405 405 375.202 285.798 256z"/></svg>
+      </div>
+      <div class="nav w-full lg:flex lg:items-center lg:w-auto xxs:px-4 xxs:hidden lg:block">
+        <a href="#" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-12 lg:pb-2 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
+                Our Story
+        </a>
+        <a href="#" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-5 lg:pb-2 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
+                Contact
+        </a>
+      </div>
+    </nav>
+</section>
+        
+<div id="bg_text" class="pt-48">
+  <h1 class="text-center text-10xl tracking-loose antialiased animated pulse h-screen z-0">PHOTOS</h1>
 </div>
 
-<div id="photos" class="flex flex-wrap -mt-128 z-40">
+<div id="photos" class="flex flex-wrap -mt-128 z-20">
   
 </div>
 
-<!-- <script
+<script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script> -->
+  crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="resources/js/photos.js"></script>
 </body>
