index page and app.js recoded

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <p class="xxs:text-2xl md:text-4xl xl:text-6xl">
       I have found the one whom my soul loves.
   </p> <br> 
-  <span class="xxs:text-2xl md:text-4xl xl:text-6xl"> 
+  <span class="xxs:text-xl md:text-3xl xl:text-4xl"> 
     &dash; Song of Songs 3:4 &dash;
   </span>
 </section>
