index page and app.js recoded

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   </h1>
   <p class="xxs:text-2xl md:text-4xl xl:text-6xl">
       I have found the one whom my soul loves.
-  </p> <br> 
+  </p> 
+  <!-- adding classes so postcss can process before app.js adds them on line 53 -->
+  <br class="xxs:pt-32 xl:pt-40"> 
   <span class="xxs:text-xl md:text-3xl xl:text-4xl"> 
     &dash; Song of Songs 3:4 &dash;
   </span>
