--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -17,7 +16,7 @@
     14&dash;12&dash;19 
   </h1>
   <p class="xxs:text-2xl md:text-4xl xl:text-6xl">
-      I have found the one whom my soul loves.
+    I have found the one whom my soul loves.
   </p> 
   <!-- adding classes so postcss can process before app.js adds them on line 53 -->
   <br class="xxs:pt-32 xl:pt-40"> 
@@ -26,27 +25,27 @@
   </span>
 </section>
 
-<section id="landing" class="bg-appteal border-double border-8 border-appgold h-screen hidden">
-<div class="sticky font-body text-white top-0 z-40 text-white">
-  <nav class="flex flex-wrap justify-between bg-appteal xxs:py-2">
+<section id="landing" class="bg-appteal text-white border-double border-8 border-appgold h-screen hidden">
+<div class="sticky font-body top-0 z-40 text-white">
+  <nav class="flex flex-wrap justify-between xxs:py-2">
     <div class="cursor-pointer xxs:ml-5">
       <a href="/"><img src="/resources/img/logo.png" alt="logo"></a>
     </div>
     <div class="toggle cursor-pointer block lg:hidden p-2">
-                  <svg class="icon fill-current h-8 w-8 block" viewBox="0 0 512 512"><path d="M64 384h384v-42.666H64V384zm0-106.666h384v-42.667H64v42.667zM64 128v42.665h384V128H64z"/></svg>
-                  <svg class="icon fill-current h-8 w-8 hidden" viewBox="0 0 512 512"><path d="M405 136.798L375.202 107 256 226.202 136.798 107 107 136.798 226.202 256 107 375.202 136.798 405 256 285.798 375.202 405 405 375.202 285.798 256z"/></svg>
+      <svg class="icon fill-current h-8 w-8 block" viewBox="0 0 512 512"><path d="M64 384h384v-42.666H64V384zm0-106.666h384v-42.667H64v42.667zM64 128v42.665h384V128H64z"/></svg>
+      <svg class="icon fill-current h-8 w-8 hidden" viewBox="0 0 512 512"><path d="M405 136.798L375.202 107 256 226.202 136.798 107 107 136.798 226.202 256 107 375.202 136.798 405 256 285.798 375.202 405 405 375.202 285.798 256z"/></svg>
     </div>
     <div class="nav w-full lg:flex lg:items-center lg:w-auto xxs:px-4 xxs:hidden lg:block">
       <a href="#" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-12 lg:pb-2 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
-                    Our Story
+          Our Story
       </a>
       <a href="#" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-5 lg:pb-2 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
-                    Photos
+          Photos
       </a>
     </div>
   </nav>
 </div>
-<div id="main" class="flex flex-wrap text-white xxs:pt-2 md:pt-10 xl:pt-12">
+<div id="main" class="flex flex-wrap xxs:pt-2 md:pt-10 xl:pt-12">
 	  <h1 class="flex w-full justify-center font-body xxs:tracking-widest xl:tracking-loose leading-none uppercase">&dash; Save The Date &dash;</h1>
 	  <h1 class="flex w-full justify-center font-body tracking-widest leading-none uppercase xxs:text-5xl md:text-6xl lg:text-8xl pt-6 animated zoomIn delay-1s">Eyram</h1>
 	  <div class="flex w-full justify-center">
@@ -61,14 +60,14 @@
     </h1>
 </div>
 
-<div id="clock" class="flex flex-wrap font-body text-white tracking-tighter leading-none text-4xl pt-12 md:pb-0 animated slideInUp">
-    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="days" class="font-black text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span id="day" class="pl-4"></span></div>
-    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="hours" class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span id="hrs" class="pl-4"></span></div>
-    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="minutes" class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span id="mins" class="pl-4"></span></div>
-    <div class="flex justify-center xxs:w-full md:w-1/4"><span id="seconds" class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span id="secs" class="pl-4"></span></div>
+<div id="clock" class="flex flex-wrap font-body text-white tracking-tighter leading-none text-4xl pt-12 animated slideInDown">
+    <div id="days" class="flex justify-center xxs:w-full md:w-1/4"><span class="font-black text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
+    <div id="hours" class="flex justify-center xxs:w-full md:w-1/4"><span class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
+    <div id="minutes" class="flex justify-center xxs:w-full md:w-1/4"><span class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
+    <div id="seconds" class="flex justify-center xxs:w-full md:w-1/4"><span class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
 </div>
 
-<div id="last" class="flex justify-center font-body text-white tracking-tighter leading-none text-4xl xxs:pt-2 xl:pt-12 md:pb-0">
+<div id="last" class="flex justify-center font-body text-white tracking-tighter leading-none text-4xl xxs:pt-2 md:pt-12">
     <a href="#"><button class="xxs:text-xl lg:text-3xl py-2 px-4 border border-appgold focus:outline-none shadow-xl animated pulse delay-2s">
      Click Here To RSVP!
     </button></a>
