js logic updated

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
   </h1>
   <p class="xxs:text-2xl md:text-4xl xl:text-6xl">
     I have found the one whom my soul loves.
-  </p> 
-  <!-- adding classes so postcss can process before app.js adds them on line 53 -->
-  <br class="xxs:pt-32 xl:pt-40"> 
+  </p> <br> 
   <span class="xxs:text-xl md:text-3xl xl:text-4xl"> 
     &dash; Song of Songs 3:4 &dash;
   </span>
@@ -60,7 +58,7 @@
     </h1>
 </div>
 
-<div id="clock" class="flex flex-wrap font-body text-white tracking-tighter leading-none text-4xl pt-12 animated slideInDown">
+<div id="clock" class="flex flex-wrap font-body text-white tracking-tighter leading-none text-4xl pt-12 animated slideInUp">
     <div id="days" class="flex justify-center xxs:w-full md:w-1/4"><span class="font-black text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
     <div id="hours" class="flex justify-center xxs:w-full md:w-1/4"><span class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
     <div id="minutes" class="flex justify-center xxs:w-full md:w-1/4"><span class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
