our story page added

--- a/our-story.html
+++ b/our-story.html
@@ -46,10 +46,10 @@
 <section>
   <div class="flex flex-wrap mb-12">
       <div class="xxs:w-full lg:w-1/2 text-center">
-        <h1 class=" text-8xl">Our Story</h1>
-        <p class="text-2xl">&dash;</p>
+        <h1 class="text-8xl">Our Story</h1>
+        <p class="leading-tight text-2xl">&dash;</p>
         <p class="leading-tight text-appgold text-xl px-24">"The most important things to do in the world are to get something to eat, something to drink and somebody to love you." - <span class="text-gray-500">Brendan Behan</span></p>
-        <p class="text-2xl">&dash;</p>
+        <p class="leading-tight text-2xl">&dash;</p>
 
         <p class="leading-tight text-2xl text-justify xxs:px-6 lg:pl-20">This story, my story began some 7 years ago today. It was a fine sunny Saturday morning, 
           my group and I were going on a quarterly charity trip to the Volta Region. Into the bus entered this damsel, when I saw her I knew she was the one for me.
