media queries edited

--- a/our-story.html
+++ b/our-story.html
@@ -22,8 +22,9 @@
    <title>Eyram &amp; Esi || Photos</title>
 </head>
 
-<body class="bg-appteal font-body text-white border-double border-8 border-appgold ">
-  <section class="sticky top-0 z-40 ">
+<body class="bg-appteal font-body text-white border-double border-8 border-appgold">
+  <section class="">
+  <div class="sticky top-0 z-40 ">
     <nav class="flex flex-wrap justify-between bg-appteal xxs:py-2">
       <div class="cursor-pointer xxs:ml-5">
               <a href="/"><img src="/resources/img/logo.png" alt="logo"></a>
@@ -41,18 +42,18 @@
         </a>
       </div>
     </nav>
-</section>
+  </div>
         
-<section>
+<div>
   <div class="flex flex-wrap mb-12">
       <div class="xxs:w-full lg:w-1/2 text-center">
-        <h1 class="text-8xl">Our Story</h1>
+        <h1 class="xxs:text-6xl text-8xl">Our Story</h1>
         <p class="leading-tight text-2xl">&dash;</p>
-        <p class="leading-tight text-appgold text-xl px-24">"The most important things to do in the world are to get something to eat, something to drink and somebody to love you." - <span class="text-gray-500">Brendan Behan</span></p>
+        <p class="leading-tight text-appgold text-xl xxs:px-2 xs:px-12 lg:px-24">"The most important things to do in the world are to get something to eat, something to drink and somebody to love you." - <span class="text-gray-500">Brendan Behan</span></p>
         <p class="leading-tight text-2xl">&dash;</p>
 
-        <p class="leading-tight text-2xl text-justify xxs:px-6 lg:pl-20">This story, my story began some 7 years ago today. It was a fine sunny Saturday morning, 
-          my group and I were going on a quarterly charity trip to the Volta Region. Into the bus entered this damsel, when I saw her I knew she was the one for me.
+        <p class="leading-tight xxs:text-xl text-2xl text-justify xxs:px-6 lg:pl-20">This story, my story began some 7 years ago today. It was a fine sunny Saturday morning, 
+          my group a nd I were going on a quarterly charity trip to the Volta Region. Into the bus entered this damsel, when I saw her I knew she was the one for me.
           We became good friends after that and she was really really cool. Fast forward, life got hectic and I left the country for a bit and we stopped talking like we used to. <br> <br>
 
           In the wake of December 25th last year I received a gift, it was her, Theodora Maame Esi Torto, she messaged me on Instagram and wished me Merry Christmas. I was in a very 
@@ -65,8 +66,8 @@
         <img class="shadow-2xl" src="/resources/img/our-story.jpg" alt="our-story">
       </div>
     </div>
+</div>
 </section>
-
 <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
