media queries edited

--- a/index.html
+++ b/index.html
@@ -2340,7 +2340,7 @@
     </h1>
 </div>
 
-<div class="flex flex-wrap font-body text-white tracking-tighter leading-none xxs:text-3xl xs:text-2xl lg:text-4xl md:pt-12 animated slideInUp">
+<div class="flex flex-wrap font-body text-white tracking-tighter leading-none xxs:text-3xl xs:text-2xl lg:text-4xl xs:pt-6 md:pt-12 animated slideInUp">
     <div id="days" class="flex justify-center xxs:w-full md:w-1/4"><span class="font-black text-appgold xxs:text-6xl md:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
     <div id="hours" class="flex justify-center xxs:w-full md:w-1/4"><span class="font-extrabold text-appgold xxs:text-6xl md:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
     <div id="minutes" class="flex justify-center xxs:w-full md:w-1/4"><span class="font-extrabold text-appgold xxs:text-6xl md:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
