media queries edited

--- a/index.html
+++ b/index.html
@@ -2295,10 +2295,10 @@
       <span class="xxs:text-4xl lg:text-6xl">Welcome</span>
     </div>
     <div class="w-full pt-32">
-      <p class="xxs:text-xl md:text-3xl xl:text-4xl leading-none tracking-tighter">
+      <p class="xxs:text-xl xs:text-2xl md:text-4xl xl:text-5xl leading-none tracking-tighter">
           I have found the one whom my soul loves.
       </p> <br> 
-      <span class="xxs:text-xl md:text-3xl xl:text-4xl leading-none"> 
+      <span class="xxs:text-lg  md:text-3xl xl:text-4xl leading-none"> 
         &dash; Song of Songs 3:4 &dash;
       </span>
     </div>
