photos page added

--- a/photos.html
+++ b/photos.html
@@ -43,7 +43,7 @@
 </section>
         
 <div id="bg_text" class="py-6">
-  <h1 class="text-center tracking-loose xxs:text-4xl lg:text-10xl antialiased animated zoomIn z-0">PHOTOS</h1>
+  <h1 class="text-center tracking-loose xxs:text-3xl xs:text-4xl lg:text-10xl antialiased animated zoomIn z-0">PHOTOS</h1>
 </div>
 
 <div id="photos" class="flex flex-wrap z-10">
