our story page edited

--- a/our-story.html
+++ b/our-story.html
@@ -46,10 +46,10 @@
         
 <div>
   <div class="flex flex-wrap mb-12">
-      <div class="xxs:w-full lg:w-1/2 text-center lg:pt-20">
+      <div class="xxs:w-full lg:w-1/2 text-center lg:pt-20 md:h-screen lg:h-auto">
         <h1 class="xxs:text-6xl text-8xl">Our Story</h1>
         <p class="leading-tight text-2xl">&dash;</p>
-        <p class="leading-tight text-appgold text-xl xxs:px-2 xs:px-12 lg:px-24">"The most important things to do in the world are to get something to eat, something to drink and somebody to love you." - <span class="text-gray-500">Brendan Behan</span></p>
+        <p class="leading-tight text-appgold xxs:text-sm md:text-xl xxs:px-6 xs:px-12 lg:px-24">"The most important things to do in the world are to get something to eat, something to drink and somebody to love you." - <span class="text-gray-500">Brendan Behan</span></p>
         <p class="leading-tight text-2xl">&dash;</p>
 
         <p class="leading-tight xxs:text-xl text-2xl text-justify xxs:px-6 lg:pl-20">This story, my story began some 7 years ago today. It was a fine sunny Saturday morning, 
@@ -62,7 +62,7 @@
         </p>
 
       </div>
-      <div class="xxs:hidden lg:block lg:w-1/2 lg:px-40 lg:pt-10">
+      <div class="xxs:hidden lg:block lg:w-1/2 lg:px-12 lg:pt-56 xl:px-40 xl:pt-10">
         <img class="shadow-2xl" src="/resources/img/our-story.jpg" alt="our-story">
       </div>
     </div>
