our story page edited

--- a/photos.html
+++ b/photos.html
@@ -50,8 +50,8 @@
   
 </div>
 
-<div id="myModal" class="modal fixed left-0 top-0 w-full h-full overflow-auto hidden xxs:pt-12 lg:pt-24 z-40">
-    <span class="close absolute text-white text-6xl font-black hover:cursor-pointer hover:text-gray-500 hover:no-underline">&times;</span>
+<div id="myModal" class="modal bg-black-lighter fixed left-0 top-0 w-full h-full overflow-auto hidden xxs:pt-12 lg:pt-24 z-40">
+    <span class="close absolute text-white text-6xl font-black top-15 right-10 hover:cursor-pointer hover:text-gray-500 hover:no-underline">&times;</span>
     <img id="img01" class="animated zoomIn block w-4/5 max-w-2xl  m-auto">
 </div>
 
