our story page edited

--- a/photos.html
+++ b/photos.html
@@ -47,7 +47,8 @@
 </div>
 
 <div id="photos" class="flex flex-wrap z-10">
-  
+    <div class="flex justify-center xxs:w-1/2 lg:w-1/4 xxs:px-3 mb-4 z-10"></div>
+    <img class="w-full lg:max-w-xs cursor-pointer hover:opacity-75" src="" alt="">
 </div>
 
 <div id="myModal" class="modal bg-black-lighter fixed left-0 top-0 w-full h-full overflow-auto hidden xxs:pt-12 lg:pt-24 z-40">
