--- a/index.html
+++ b/index.html
@@ -2295,7 +2295,7 @@
       <span class="xxs:text-4xl lg:text-6xl">Welcome</span>
     </div>
     <div class="w-full pt-32">
-      <p class="xxs:text-xl xs:text-2xl md:text-4xl xl:text-5xl leading-none tracking-tighter">
+      <p class="xxs:text-xl xs:text-2xl md:text-4xl xl:text-5xl tracking-tighter">
           I have found the one whom my soul loves.
       </p> <br> 
       <span class="xxs:text-lg  md:text-3xl xl:text-4xl leading-none"> 
