--- a/our-story.html
+++ b/our-story.html
@@ -52,13 +52,13 @@
         <p class="leading-tight text-appgold xxs:text-sm md:text-xl xxs:px-6 xs:px-12 lg:px-24">"The most important things to do in the world are to get something to eat, something to drink and somebody to love you." - <span class="text-gray-500">Brendan Behan</span></p>
         <p class="leading-tight text-2xl">&dash;</p>
 
-        <p class="leading-tight xxs:text-xl text-2xl text-justify xxs:px-6 lg:pl-20">This story, my story began some 7 years ago today. It was a fine sunny Saturday morning, 
-          my group a nd I were going on a quarterly charity trip to the Volta Region. Into the bus entered this damsel, when I saw her I knew she was the one for me.
-          We became good friends after that and she was really really cool. Fast forward, life got hectic and I left the country for a bit and we stopped talking like we used to. <br> <br>
+        <p class="leading-tight xxs:text-xl text-2xl text-justify xxs:px-6 lg:pl-20">This story, our story began some 7 years ago today. It was a very fine sunny Saturday morning, 
+          Eyram's charity group, BiG, were going their usual quarterly charity trip to the Volta Region. Into the bus entered this damsel, sweet and glowing; she had so much radiance, her name is Esi .
+          Eyram and Esi barely said a word to each other on the bus because Eyram was being his usual non-talkative self throughout the journey but because the Lord is good, they became very good friends after that trip. Fast forward, life got hectic and Eyram left the country for a bit and they stopped talking like they used to. <br> <br>
 
-          In the wake of December 25th last year I received a gift, it was her, Theodora Maame Esi Torto, she messaged me on Instagram and wished me Merry Christmas. I was in a very 
-          very bad place and that message restructured every aching muscle on my face and I smiled. We talked about all and every thing, we talked about how much I had missed her and she has always been the one for me.
-          I got back to Ghana on the 30th of January, 2019 and I popped the question, the heart wrenching question, "Will you marry me?". She hesitated, my heart flinched and she smiled and said yes. I didn't get lucky, I am blessed. - <span class="text-gray-500">Eyram</span>
+          In the wake of December 25th last year Eyram was somewhere very far away in his favourite city on earth and he received a message, it was her, Theodora Maame Esi Torto, wishing Eyram a very Merry Christmas. Eyram was in a very 
+          very bad place and that message restructured every aching muscle on my face and he smiled. They both talked about all and everything, they spoke about how much he had missed her and how she had always been the one for him. 
+          Eyram got back to Ghana on the 30th of January, 2019 and without hesitation the first person he looked for was Esi. He popped the question, that heart wrenching question, "Will you marry me?". She hesitated, his heart skipped so many beats but she smiled and said yes. This was the beginning of a beautiful journey for both of them. 
         </p>
 
       </div>
