--- a/index.html
+++ b/index.html
@@ -2350,14 +2350,14 @@
 </div>
 
 <div id="clock" class="flex flex-wrap font-body text-white tracking-tighter leading-none xxs:text-3xl xs:text-2xl lg:text-4xl xs:pt-6 md:pt-12 animated slideInUp">
-    <div id="days" class="flex justify-center xxs:w-full md:w-1/4"><span class="font-black text-appgold xxs:text-6xl md:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
-    <div id="hours" class="flex justify-center xxs:w-full md:w-1/4"><span class="font-extrabold text-appgold xxs:text-6xl md:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
-    <div id="minutes" class="flex justify-center xxs:w-full md:w-1/4"><span class="font-extrabold text-appgold xxs:text-6xl md:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
-    <div id="seconds" class="flex justify-center xxs:w-full md:w-1/4"><span class="font-extrabold text-appgold xxs:text-6xl md:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
+    <div class="flex justify-center xxs:w-full md:w-1/4"><span class="font-black text-appgold xxs:text-6xl md:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
+    <div class="flex justify-center xxs:w-full md:w-1/4"><span class="font-extrabold text-appgold xxs:text-6xl md:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
+    <div class="flex justify-center xxs:w-full md:w-1/4"><span class="font-extrabold text-appgold xxs:text-6xl md:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
+    <div class="flex justify-center xxs:w-full md:w-1/4"><span class="font-extrabold text-appgold xxs:text-6xl md:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
 </div>
 
 <div id="last" class="flex justify-center font-body text-white tracking-tighter leading-none text-4xl xxs:pt-2 md:pt-12">
-    <a id="link" href="#" target="_blank" rel="noreferrer"><button id="button" class="xxs:text-xl lg:text-3xl py-2 px-4 border border-appgold focus:outline-none shadow-xl animated pulse delay-2s">
+    <a id="link" href="#" rel="noreferrer"><button id="button" class="xxs:text-xl lg:text-3xl py-2 px-4 border border-appgold focus:outline-none shadow-xl animated pulse delay-2s">
      Click Here To RSVP!</button></a>
     <audio id="media" src="/resources/data/background.mp3" muted></audio>
 </div>
