--- a/index.html
+++ b/index.html
@@ -2310,7 +2310,7 @@
 <div class="sticky font-body top-0 z-40 text-white">
   <nav class="flex flex-wrap justify-between xxs:py-2">
     <div class="cursor-pointer xxs:ml-5">
-      <a href="/"><img src="/resources/img/logo.png" alt="logo"></a>
+      <a href="#"><img src="/resources/img/logo.png" alt="logo"></a>
     </div>
     <div class="toggle cursor-pointer block lg:hidden p-2">
       <svg class="icon fill-current h-8 w-8 block" viewBox="0 0 512 512"><path d="M64 384h384v-42.666H64V384zm0-106.666h384v-42.667H64v42.667zM64 128v42.665h384V128H64z"/></svg>
