--- a/photos.html
+++ b/photos.html
@@ -35,7 +35,7 @@
         <a href="our-story.html" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-12 lg:pb-1 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
                 Our Story
         </a>
-        <a href="/photos.html" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-5 lg:pb-1 lg:border-b-2 lg:border-b-2 lg:border-white">
+        <a href="#" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-5 lg:pb-1 lg:border-b-2 lg:border-b-2 lg:border-white">
                 Photos
         </a>
       </div>
