--- a/our-story.html
+++ b/our-story.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="resources/css/animate.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="resources/css/app.css" rel="stylesheet">
-   <title>Eyram &amp; Esi || Photos</title>
+   <title>Eyram &amp; Esi || Our Story</title>
 </head>
 
 <body class="bg-appteal font-body text-white border-double border-8 border-appgold">
@@ -62,17 +62,11 @@
         </p>
 
       </div>
-      <div class="xxs:hidden lg:block lg:w-1/2 lg:px-12 lg:pt-56 xl:px-40 xl:pt-10">
+      <div class="xxs:hidden lg:block lg:w-1/2 lg:px-6 lg:pt-32 xl:px-12 xl:pt-32 xl2:px-16">
         <img class="shadow-2xl" src="/resources/img/our-story.jpg" alt="our-story">
       </div>
     </div>
 </div>
 </section>
-<script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script src="resources/js/photos.js"></script>
 </body>
 </html>
